--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=C:\\Users\\cream\\AppData\\Local\\Android\\sdk
-flutter.sdk=D:\\Flutter SDK\\flutter
+sdk.dir=/Users/macos/Library/Android/sdk
+flutter.sdk=/Users/macos/Luke/flutter
